# ReleaseCopilot-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cdk.json  docker-compose.yml  index.html  issues.md  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  recover_and_export.py  releasecopilot_bootstrap.py  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: mop_subprompt.yml
.github/workflows/: actions_comment.yml  cdk-ci.yml  ci-v2.yml  ci-watchdog.yml  ci.yml  docs.yml  gen-guard.yml  historian-notes-mirror.yml  orchestrator-runner.yml  reusable-orchestrator.yml  validate_prompts.yml  weekly-history.yml
CI-CDK-Preflight/: index.html
CI_CD/CodexIntegration/: index.html
actions/: README.md  pending_actions.json
active_mops/: index.html
adr/ADR-0001-cdk-root-config/: index.html
agent_research/: index.html
architecture/: index.html
artifacts/: top_issues.json
artifacts/manifests/: wave3_subprompts.json
artifacts/release_notes/: run.schema.json
artifacts/validation/: run.schema.json
aws/: core_handler.py  lambda_handler.py  s3_utils.py
aws-setup/: index.html
backlog/: wave3.yaml
cdk/: app.py  index.html
cdk/stacks/: core_stack.py  lambda_stack.py
checklists/cdk-change-checklist/: index.html
ci-cd/: index.html
ci-cd-least-priv/: index.html
cli/: __init__.py
cli-usage/: index.html
clients/: base.py  bitbucket_client.py  jira_client.py  jira_store.py  secrets_manager.py
config/: defaults.yml  loader.py  settings.py  wave2_helper.yml
configuration/defaults/: index.html
context/: context-index.json
deployment/: index.html
dev_setup/: index.html
diagrams/agents/: index.html
diagrams/components/: index.html
diagrams/data-flow/: index.html
diagrams/deployment-aws/: index.html
diagrams/system-context/: index.html
docs/: active_mops.md  aws-setup.md  ci-cd-least-priv.md  cli-usage.md  contributing.md  deployment.md  git-historian.md  markers.md  project_instructions.md
docs/CI_CD/: CodexIntegration.md  ci-watchdog.md
docs/ci/: ci-hardening.md
docs/configuration/: defaults.md
docs/context/: context-index.json
docs/diagrams/: components.md
docs/history/: 2025-10-06-checkin.md  2025-10-13-checkin.md  2025-10-20-checkin.md  2025-10-27-checkin.md  bugfixes.md
docs/mop/: mop_wave3.md
docs/promptops/: Human_in_Loop.md  MOP_Workflow.md  Prompt_Recipe_Guide.md  helpers.md  human_actions.md  orchestrator.md
docs/runbook/: linting.md
docs/runbooks/: artifacts_bucket.md  budget-alerts.md  ci.md  ci_wave_check.md  contributing.md  correlation.md  cost_guardrails.md  generator.md  ingest-bitbucket.md  jira-webhooks.md  jira.md  mypy.md  orchestrator.md  orchestrator_dispatch.md  release-artifacts.md  secret_hygiene.md  testing.md  wave2_human_actions.md  webhook_ingest_oncall.md
export/: __init__.py
export-schema/: index.html
exporters/: excel_exporter.py  json_exporter.py
git-historian/: index.html
history/: index.html
history/2025-09-25-checkin/: index.html
history/2025-09-26-checkin/: index.html
history/2025-09-29-checkin/: index.html
history/2025-10-06-checkin/: index.html
history/2025-10-13-checkin/: index.html
history/2025-10-20-checkin/: index.html
history/2025-10-27-checkin/: index.html
history/HISTORY_TEMPLATE/: index.html
history/bugfixes/: index.html
infra/cdk/: README.md  app.py  core_stack.py  run_cdk_app.py
infra/envs/: dev.json  prod.json
markers/: index.html
matcher/: __init__.py
observability/: index.html
ops/: __init__.py
processors/: audit_processor.py
project/mop/: wave2_mop.md
project/prompts/: waves.json
project_instructions/: index.html
promptops/Human_in_Loop/: index.html
promptops/MOP_Workflow/: index.html
promptops/Prompt_Recipe_Guide/: index.html
prompts/: critic_check.md  subprompt_template.md
releasecopilot/: __init__.py
runbooks/artifacts_bucket/: index.html
runbooks/budget-alerts/: index.html
runbooks/cdk-synth-deploy/: index.html
runbooks/cost_guardrails/: index.html
runbooks/health_smoke/: index.html
runbooks/history-collectors/: index.html
runbooks/history-pr/: index.html
runbooks/secret_hygiene/: index.html
runbooks/webhook_ingest_oncall/: index.html
scripts/: backlog_items.json  check_generated_wave.py  compose_policies.py  deploy_env.py  generate_history.py  get_backlog.sh  package_lambda.sh  raw_project_data.json  run_backlog_script.bat  seed_labels_and_issues.sh
scripts/ci/: check_generator_drift.sh  coverage_gate.py  run_precommit.sh
scripts/github/: __init__.py  check_comment_permissions.py  ci_watchdog.py  projects_v2.py  run_watchdog_autofix.sh  sample_issue_comment_event.json  simulate_orchestrator_event.sh  wave2_helper.py
scripts/promptops/: __init__.py  human_actions.py
search/: search_index.json
services/jira_reconciliation_job/: handler.py
services/jira_sync_webhook/: __init__.py  handler.py
services/webhooks/: __init__.py  bitbucket.py  jira.py
skills/import-hygiene/: README.md
src/cli/: app.py  audit.py  health.py  main.py  orchestrator.py  shared.py
src/config/: loader.py
src/export/: cli_recover.py  exporter.py  release_notes.py
src/matcher/: engine.py  link_rules.py
src/ops/: health.py
src/releasecopilot/: __init__.py  _cli_loader.py  aws_secrets.py  cli.py  cli_releasecopilot.py  errors.py  logging_config.py  uploader.py
src/tracking/: __init__.py  api.py  correlation.py  diff.py  diff_cli.py
templates/: issue_body.md.j2  mop.md.j2  subprompt.md.j2
tests/: conftest.py  test_cli_args.py  test_clients_retry.py  test_config_merge.py  test_config_precedence.py  test_core_infra_stack.py  test_diff.py  test_dotenv_precedence.py  test_exporter_golden.py  test_logging_config.py  test_recover_and_export.py  test_wave_generator.py
tests/cli/: test_audit_csv_fallback.py  (+4 more)
tools/: coverage_gate.py  render_actions_comment.py  validate_prompts.py
tracking/: __init__.py
ui/: app.py  data_source.py  transform.py
(+232 files in other folders)
