[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "releasecopilot-ai"
version = "0.0.0"
description = "Release Copilot automation tooling"
readme = "README.md"
authors = ["Release Copilot Team"]
packages = [
  { include = "releasecopilot", from = "src" },
  { include = "cli", from = "src" },
  { include = "export", from = "src" },
  { include = "matcher", from = "src" },
  { include = "ops", from = "src" },
  { include = "tracking", from = "src" },
  { include = "clients" },
  { include = "config" },
  { include = "exporters" },
  { include = "processors" },
  { include = "services" },
  { include = "ui" },
  { include = "tools" },
  { include = "scripts" },
]

[tool.poetry.dependencies]
python = "3.11.7"
boto3 = "1.34.0"
click = "8.1.7"
requests = "2.31.0"
pandas = "2.1.0"
openpyxl = "3.1.0"
PyYAML = "6.0.0"
Jinja2 = "3.1.0"
python-slugify = "8.0.0"

[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "2.154.1"
constructs = "10.3.0"
python-dotenv = "1.0.0"
ruff = "0.6.9"
pytest = "8.3.3"
pytest-cov = "5.0.0"
jsonschema = "4.23.0"
mypy = "1.11.2"
pre-commit = "3.8.0"
types-PyYAML = "6.0.12.20240808"
types-requests = "2.32.0.20241016"
"ruamel.yaml" = "0.18.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
mkdocs-material = "9.5.39"
pymdown-extensions = "10.11.2"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "pymdown-extensions"]
optional = ["python-dotenv"]

[tool.poetry.scripts]
rc = "releasecopilot.cli.__main__:main"
rc-audit = "releasecopilot.entrypoints.audit:main"
rc-recover = "releasecopilot.entrypoints.recover:main"
rc-wave2 = "releasecopilot.entrypoints.wave2:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "."]

[tool.ruff.lint]
select = ["E4", "F"]
extend-select = ["I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = [
  "releasecopilot",
  "cli",
  "clients",
  "config",
  "export",
  "matcher",
  "ops",
  "processors",
  "services",
  "tracking",
  "ui",
]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "rag_aws.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["releasecopilot"]
branch = true

[tool.coverage.report]
show_missing = true
omit = [
  "infra/**",
  "scripts/**",
  "tools/**",
  "services/**/handler.py",
  "src/**/__main__.py",
]
fail_under = 70
